--- a/trunk/mscore/mscore/chord.ui
+++ b/trunk/mscore/mscore/chord.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>318</width>
-    <height>221</height>
+    <width>307</width>
+    <height>185</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,165 +28,132 @@
      <property name="flat">
       <bool>false</bool>
      </property>
-     <layout class="QVBoxLayout">
+     <layout class="QGridLayout" name="gridLayout">
       <property name="spacing">
-       <number>6</number>
+       <number>0</number>
       </property>
-      <property name="margin">
-       <number>8</number>
-      </property>
-      <item>
-       <layout class="QGridLayout" name="gridLayout" rowminimumheight="0,0">
-        <property name="topMargin">
-         <number>0</number>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="hookButton">
+        <property name="toolTip">
+         <string notr="true"/>
         </property>
-        <property name="bottomMargin">
-         <number>0</number>
+        <property name="text">
+         <string notr="true" comment="do not translate">Hook</string>
         </property>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="hookButton">
-          <property name="toolTip">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string notr="true" comment="do not translate">Hook</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="stemButton">
-          <property name="toolTip">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string notr="true" comment="do not translate">Stem</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
-         <widget class="QPushButton" name="stemSlashButton">
-          <property name="text">
-           <string notr="true" extracomment="do not translate">StemSlash</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="arpeggioButton">
-          <property name="text">
-           <string>Arpeggio</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QPushButton" name="tremoloButton">
-          <property name="text">
-           <string>Tremolo</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QPushButton" name="glissandoButton">
-          <property name="text">
-           <string>Glissando</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       </widget>
       </item>
-      <item>
-       <layout class="QHBoxLayout">
-        <property name="spacing">
-         <number>6</number>
+      <item row="0" column="1" colspan="3">
+       <widget class="QPushButton" name="stemButton">
+        <property name="toolTip">
+         <string notr="true"/>
         </property>
-        <property name="margin">
-         <number>0</number>
+        <property name="text">
+         <string notr="true" comment="do not translate">Stem</string>
         </property>
-        <item>
-         <widget class="QCheckBox" name="graceNote">
-          <property name="text">
-           <string notr="true" comment="do not translate">Grace Note</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string notr="true" comment="do not translate">Stem Direction</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="stemDirection"/>
-        </item>
-       </layout>
+       </widget>
       </item>
-      <item>
-       <layout class="QGridLayout">
-        <property name="margin">
-         <number>0</number>
+      <item row="0" column="4" colspan="2">
+       <widget class="QPushButton" name="stemSlashButton">
+        <property name="text">
+         <string notr="true" extracomment="do not translate">StemSlash</string>
         </property>
-        <property name="spacing">
-         <number>6</number>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="arpeggioButton">
+        <property name="text">
+         <string>Arpeggio</string>
         </property>
-        <item row="1" column="1">
-         <widget class="QListWidget" name="helplineList">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>50</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QListWidget" name="notes">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>50</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string notr="true" comment="do not translate">Notes:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string notr="true" comment="do not translate">Help Lines:</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="3">
+       <widget class="QPushButton" name="tremoloButton">
+        <property name="text">
+         <string>Tremolo</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4" colspan="2">
+       <widget class="QPushButton" name="glissandoButton">
+        <property name="text">
+         <string>Glissando</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="QCheckBox" name="graceNote">
+        <property name="text">
+         <string notr="true" comment="do not translate">Grace Note</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" colspan="3">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string notr="true" comment="do not translate">Stem Direction</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="5">
+       <widget class="QComboBox" name="stemDirection"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string notr="true" comment="do not translate">Notes:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="3" colspan="3">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string notr="true" comment="do not translate">Help Lines:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" colspan="3">
+       <widget class="QListWidget" name="notes">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3" colspan="3">
+       <widget class="QListWidget" name="helplineList">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
