--- a/trunk/mscore/mscore/chordrest.ui
+++ b/trunk/mscore/mscore/chordrest.ui
@@ -170,6 +170,9 @@
       </item>
       <item row="3" column="0" colspan="3">
        <layout class="QGridLayout" name="gridLayout">
+        <property name="verticalSpacing">
+         <number>0</number>
+        </property>
         <item row="1" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
@@ -291,6 +294,40 @@
         </item>
         <item row="1" column="7">
          <widget class="QComboBox" name="beamMode"/>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_11">
+          <property name="text">
+           <string notr="true">Space-L</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QDoubleSpinBox" name="spaceL">
+          <property name="maximum">
+           <double>999999.989999999990687</double>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="2">
+         <widget class="QLabel" name="label_12">
+          <property name="text">
+           <string notr="true">Space-R</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3" colspan="2">
+         <widget class="QDoubleSpinBox" name="spaceR">
+          <property name="maximum">
+           <double>999999.989999999990687</double>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
