--- a/trunk/mscore/mscore/note.ui
+++ b/trunk/mscore/mscore/note.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>545</width>
-    <height>271</height>
+    <width>487</width>
+    <height>255</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
      </property>
      <layout class="QGridLayout">
       <property name="spacing">
-       <number>2</number>
+       <number>0</number>
       </property>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -285,10 +285,10 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="5" rowspan="5" colspan="3">
+      <item row="2" column="5" rowspan="5" colspan="2">
        <widget class="QListWidget" name="fingering"/>
       </item>
-      <item row="8" column="5" colspan="3">
+      <item row="8" column="5" colspan="2">
        <widget class="QComboBox" name="userMirror">
         <item>
          <property name="text">
@@ -454,6 +454,27 @@
        <widget class="QPushButton" name="bend">
         <property name="text">
          <string notr="true" comment="do not translate">Bend</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="4">
+       <widget class="QPushButton" name="dot1">
+        <property name="text">
+         <string>Dot1</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="5">
+       <widget class="QPushButton" name="dot2">
+        <property name="text">
+         <string>Dot2</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="6">
+       <widget class="QPushButton" name="dot3">
+        <property name="text">
+         <string>Dot3</string>
         </property>
        </widget>
       </item>
