--- a/mscore/mscore/instrdialog.ui
+++ b/mscore/mscore/instrdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>778</width>
-    <height>435</height>
+    <width>632</width>
+    <height>414</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,8 +15,14 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
+     <widget class="QWidget" name="">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QTreeWidget" name="instrumentList">
@@ -47,8 +53,8 @@
         </widget>
        </item>
       </layout>
-     </item>
-     <item>
+     </widget>
+     <widget class="QWidget" name="">
       <layout class="QVBoxLayout">
        <property name="spacing">
         <number>6</number>
@@ -72,7 +78,7 @@
        <item>
         <widget class="QPushButton" name="addButton">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -191,6 +197,12 @@
        </item>
        <item>
         <widget class="QPushButton" name="linkedButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text">
           <string>Add linked Staff</string>
          </property>
@@ -210,39 +222,42 @@
         </spacer>
        </item>
       </layout>
-     </item>
-     <item>
-      <widget class="QTreeWidget" name="partiturList">
-       <property name="alternatingRowColors">
-        <bool>true</bool>
+     </widget>
+     <widget class="QTreeWidget" name="partiturList">
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="uniformRowHeights">
+       <bool>true</bool>
+      </property>
+      <property name="columnCount">
+       <number>4</number>
+      </property>
+      <column>
+       <property name="text">
+        <string>Staves</string>
        </property>
-       <property name="uniformRowHeights">
-        <bool>true</bool>
+      </column>
+      <column>
+       <property name="text">
+        <string>visible</string>
        </property>
-       <property name="columnCount">
-        <number>3</number>
+      </column>
+      <column>
+       <property name="text">
+        <string>Clef</string>
        </property>
-       <column>
-        <property name="text">
-         <string>Staves</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Clef</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>linked</string>
-        </property>
-        <property name="toolTip">
-         <string>staff linked to previous</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-    </layout>
+      </column>
+      <column>
+       <property name="text">
+        <string>linked</string>
+       </property>
+       <property name="toolTip">
+        <string>staff linked to previous</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout">
@@ -281,6 +296,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="okButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>OK</string>
        </property>
